Fix tracks alignment when displays are clicked

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,8 +21,7 @@ body {
   padding-bottom: 0;
   position: relative;
   z-index: 3;
-  -webkit-transition: 'all, 370ms, ease-in-out';
-          transition: 'all, 370ms, ease-in-out'; }
+  transition: 'all, 370ms, ease-in-out'; }
   .buttons button {
     display: inline-block;
     padding: 7px 8px;
